<resources>
    <string name="app_name">Deepflick</string>
    <string name="sort">Sort</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="error_msg">No Connection</string>
    <string name="error_msg2">You are 404 million kilometres away from us.</string>
    <string name="error_msg3">Please tap on Refresh button to try connecting back.</string>
    <string name="refresh">REFRESH NOW</string>
    <string name="rating">Rating : </string>
    <string name="release_date">Release Date : </string>
    <string name="adult">Adult Content : </string>
    <string name="overview">Overview</string>
    <string name="review">Reviews</string>
    <string name="trailers">Trailers</string>
    <string name="favorites">Favorites</string>
</resources>
