<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryVariant"
    tools:context=".view.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_movies"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/iv_error"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:src="@drawable/no_connection"
        android:scaleType="centerCrop"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/error_msg"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/iv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:text="@string/error_msg"
        android:textColor="@color/colorOnBackground"
        android:textSize="20sp"
        android:visibility="invisible" />
    <TextView
        android:id="@+id/error_msg1"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/error_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/error_msg2"
        android:textColor="@color/colorOnBackground"
        android:visibility="invisible" />
    <TextView
        android:id="@+id/error_msg2"
        android:layout_below="@+id/error_msg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/error_msg3"
        android:textColor="@color/colorOnBackground"
        android:visibility="invisible" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/refresh"
        android:layout_width="180dp"
        android:layout_height="56dp"
        android:layout_below="@id/error_msg2"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:text="@string/refresh"
        android:textColor="@color/colorWhite"
        android:visibility="invisible"
        app:cornerRadius="24dp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

</RelativeLayout>